--- a/assignment1/src/view/manageVinyl.fxml
+++ b/assignment1/src/view/manageVinyl.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylController">
    <children>
       <Label fx:id="windowTypeLabel" alignment="CENTER" layoutX="115.0" layoutY="14.0" prefHeight="32.0" prefWidth="132.0" text="Borrow">
          <font>
