--- a/assignment1/src/view/manageVinyl.fxml
+++ b/assignment1/src/view/manageVinyl.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylViewController">
    <children>
       <Label fx:id="windowTypeLabel" alignment="CENTER" layoutX="115.0" layoutY="14.0" prefHeight="32.0" prefWidth="132.0" text="Borrow">
          <font>
@@ -46,8 +43,8 @@
          </font>
       </Label>
       <TextField fx:id="titleField" editable="false" layoutX="126.0" layoutY="148.0" />
-      <TextField fx:id="artistField" layoutX="126.0" layoutY="185.0" />
-      <TextField fx:id="statusField" layoutX="126.0" layoutY="225.0" />
+      <TextField fx:id="artistField" editable="false" layoutX="126.0" layoutY="185.0" />
+      <TextField fx:id="statusField" editable="false" layoutX="126.0" layoutY="225.0" />
       <Label fx:id="errorLabel" layoutX="39.0" layoutY="299.0" prefHeight="20.0" prefWidth="238.0" text="Error" textFill="#e42727">
          <font>
             <Font size="14.0" />
