--- a/assignment1/src/view/manageVinyl.fxml
+++ b/assignment1/src/view/manageVinyl.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylViewController">
    <children>
-      <Label fx:id="windowTypeLabel" alignment="CENTER" layoutX="115.0" layoutY="14.0" prefHeight="32.0" prefWidth="132.0" text="Borrow">
+      <Label alignment="CENTER" layoutX="16.0" layoutY="14.0" prefHeight="32.0" prefWidth="318.0" text="Manage Vinyl">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
@@ -16,7 +16,7 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <TextField layoutX="126.0" layoutY="68.0" />
+      <TextField fx:id="nameField" layoutX="126.0" layoutY="68.0" />
       <Label layoutX="71.0" layoutY="161.0" prefHeight="18.0" prefWidth="52.0">
          <font>
             <Font size="17.0" />
@@ -50,7 +50,8 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="submitButton" layoutX="39.0" layoutY="262.0" mnemonicParsing="false" onAction="#submitPressed" prefHeight="26.0" prefWidth="86.0" text="Submit" />
-      <Button fx:id="cancelButton" layoutX="190.0" layoutY="262.0" mnemonicParsing="false" onAction="#cancelPressed" prefHeight="26.0" prefWidth="86.0" text="Cancel" />
+      <Button fx:id="borrowButton" layoutX="39.0" layoutY="262.0" mnemonicParsing="false" onAction="#borrowPressed" prefHeight="26.0" prefWidth="86.0" text="Borrow" />
+      <Button fx:id="reserveButton" layoutX="247.0" layoutY="262.0" mnemonicParsing="false" onAction="#reservePressed" prefHeight="26.0" prefWidth="86.0" text="Reserve" />
+      <Button fx:id="returnButton" layoutX="145.0" layoutY="262.0" mnemonicParsing="false" onAction="#returnPressed" prefHeight="26.0" prefWidth="86.0" text="Return" />
    </children>
 </AnchorPane>
