--- a/assignment1/src/view/manageVinyl.fxml
+++ b/assignment1/src/view/manageVinyl.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="333.0" prefWidth="362.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ManageVinylViewController">
    <children>
       <Label alignment="CENTER" layoutX="16.0" layoutY="14.0" prefHeight="32.0" prefWidth="318.0" text="Manage Vinyl">
          <font>
@@ -45,7 +47,7 @@
       <TextField fx:id="titleField" editable="false" layoutX="126.0" layoutY="148.0" />
       <TextField fx:id="artistField" editable="false" layoutX="126.0" layoutY="185.0" />
       <TextField fx:id="statusField" editable="false" layoutX="126.0" layoutY="225.0" />
-      <Label fx:id="errorLabel" layoutX="39.0" layoutY="299.0" prefHeight="20.0" prefWidth="238.0" text="Error" textFill="#e42727">
+      <Label fx:id="errorLabel" layoutX="39.0" layoutY="299.0" prefHeight="20.0" prefWidth="258.0" text="Error" textFill="#e42727">
          <font>
             <Font size="14.0" />
          </font>
@@ -53,5 +55,6 @@
       <Button fx:id="borrowButton" layoutX="39.0" layoutY="262.0" mnemonicParsing="false" onAction="#borrowPressed" prefHeight="26.0" prefWidth="86.0" text="Borrow" />
       <Button fx:id="reserveButton" layoutX="247.0" layoutY="262.0" mnemonicParsing="false" onAction="#reservePressed" prefHeight="26.0" prefWidth="86.0" text="Reserve" />
       <Button fx:id="returnButton" layoutX="145.0" layoutY="262.0" mnemonicParsing="false" onAction="#returnPressed" prefHeight="26.0" prefWidth="86.0" text="Return" />
+      <Button layoutX="304.0" layoutY="296.0" mnemonicParsing="false" onAction="#onCancel" prefHeight="26.0" prefWidth="30.0" text="&gt;" />
    </children>
 </AnchorPane>
