--- a/assignment1/src/view/vinylList.fxml
+++ b/assignment1/src/view/vinylList.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1209.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VinylListViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="614.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VinylListViewController">
    <children>
-      <TableView fx:id="vinylTableView" layoutX="152.0" layoutY="36.0" prefHeight="498.0" prefWidth="1024.0">
+      <TableView fx:id="vinylTableView" layoutX="152.0" layoutY="36.0" prefHeight="498.0" prefWidth="1038.0">
         <columns>
-            <TableColumn prefWidth="63.999969482421875" text="Accesible" />
-          <TableColumn fx:id="titleColumn" prefWidth="309.6000518798828" text="Title" />
-            <TableColumn fx:id="artistColumn" prefWidth="250.4000244140625" text="Artist" />
-            <TableColumn fx:id="statusColumn" prefWidth="196.79998779296875" text="Status" />
-            <TableColumn fx:id="borrowerColumn" minWidth="0.0" prefWidth="72.0" text="Borrower" />
-            <TableColumn fx:id="reserverColumn" prefWidth="128.0" text="Reserved by" />
+          <TableColumn fx:id="titleColumn" prefWidth="310.40000915527344" text="Title" />
+            <TableColumn fx:id="artistColumn" prefWidth="299.199951171875" text="Artist" />
+            <TableColumn fx:id="statusColumn" prefWidth="192.0" text="Status" />
+            <TableColumn fx:id="borrowerColumn" prefWidth="118.40008544921875" text="Borrower" />
+            <TableColumn fx:id="reserverColumn" prefWidth="117.5999755859375" text="Reserved by" />
         </columns>
       </TableView>
       <Label layoutX="14.0" layoutY="21.0" prefHeight="42.0" prefWidth="140.0" text="Vinyl library">
