--- a/assignment2/chat_system/src/view/chatView.fxml
+++ b/assignment2/chat_system/src/view/chatView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ChatViewController">
    <children>
       <Label fx:id="headerLabel" alignment="CENTER" layoutY="14.0" prefHeight="34.0" prefWidth="600.0" text="Header" AnchorPane.topAnchor="14.0">
