--- a/assignment2/chat_system/src/view/logInView.fxml
+++ b/assignment2/chat_system/src/view/logInView.fxml
@@ -12,7 +12,7 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <TextField fx:id="usernameField" layoutX="311.0" layoutY="162.0" />
+      <TextField fx:id="usernameField" onAction="#onEnter" layoutX="311.0" layoutY="162.0" />
       <Label alignment="CENTER" layoutX="141.0" layoutY="158.0" prefHeight="25.0" prefWidth="140.0" text="Username">
          <font>
             <Font size="16.0" />
@@ -20,7 +20,7 @@
       </Label>
       <Button layoutX="226.0" layoutY="241.0" mnemonicParsing="false" onAction="#logInPressed" prefHeight="54.0" prefWidth="149.0" text="Create User" />
       <Label fx:id="errorLabel" alignment="CENTER" layoutY="355.0" prefHeight="46.0" prefWidth="600.0" text="error" textFill="RED" />
-      <TextField fx:id="passwordField" layoutX="311.0" layoutY="198.0" />
+      <TextField fx:id="passwordField" onAction="#onEnter" layoutX="311.0" layoutY="198.0" />
       <Label alignment="CENTER" layoutX="141.0" layoutY="194.0" prefHeight="25.0" prefWidth="140.0" text="Password">
          <font>
             <Font size="16.0" />
