Username check statements adjusted Commands replaced to be replaced to the list of users Logger recalled for each message package

--- a/assignment2/chat_system/src/view/chatView.fxml
+++ b/assignment2/chat_system/src/view/chatView.fxml
@@ -16,7 +16,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextArea fx:id="chatList" editable="false" layoutY="52.0" prefHeight="258.0" prefWidth="600.0">
+      <TextArea fx:id="chatList" wrapText="true" editable="false" layoutY="52.0" prefHeight="258.0" prefWidth="600.0">
          <font>
             <Font size="16.0" />
          </font></TextArea>
