--- a/assignment2/chat_system/client/src/view/logInView.fxml
+++ b/assignment2/chat_system/client/src/view/logInView.fxml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LogInViewController">
    <children>
       <Label alignment="CENTER" layoutY="98.0" prefHeight="31.0" prefWidth="600.0" text="Create User ">
          <font>
@@ -20,9 +13,9 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Button fx:id="button" layoutX="226.0" layoutY="241.0" mnemonicParsing="false" onAction="#logInPressed" prefHeight="54.0" prefWidth="149.0" text="Create User" />
+      <Button layoutX="226.0" layoutY="241.0" mnemonicParsing="false" onAction="#logInPressed" prefHeight="54.0" prefWidth="149.0" text="Create User" />
       <Label fx:id="errorLabel" alignment="CENTER" layoutY="355.0" prefHeight="46.0" prefWidth="600.0" text="error" textFill="RED" />
-      <TextField fx:id="usernameField1" layoutX="311.0" layoutY="198.0" />
+      <TextField fx:id="passwordField" layoutX="311.0" layoutY="198.0" />
       <Label alignment="CENTER" layoutX="141.0" layoutY="194.0" prefHeight="25.0" prefWidth="140.0" text="Password">
          <font>
             <Font size="16.0" />
