--- a/assignment2_chat/chat_server/client/src/view/chatView.fxml
+++ b/assignment2_chat/chat_server/client/src/view/chatView.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ChatViewController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.ChatViewController">
    <children>
       <Label fx:id="headerLabel" alignment="CENTER" layoutY="14.0" prefHeight="34.0" prefWidth="600.0" text="Header" AnchorPane.topAnchor="14.0">
          <font>
@@ -15,11 +19,11 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextArea fx:id="chatList" wrapText="true" editable="false" layoutY="52.0" prefHeight="258.0" prefWidth="600.0">
+      <TextArea fx:id="chatList" editable="false" layoutY="52.0" prefHeight="258.0" prefWidth="600.0" wrapText="true">
          <font>
             <Font size="16.0" />
          </font></TextArea>
-      <TextField fx:id="inputField" onAction="#onEnter" layoutX="6.0" layoutY="318.0" prefHeight="25.0" prefWidth="459.0" />
+      <TextField fx:id="inputField" layoutX="6.0" layoutY="318.0" onAction="#onEnter" prefHeight="25.0" prefWidth="459.0" promptText="Try: &quot;/list&quot;, &quot;/number&quot; and &quot;/last&quot; commands" />
       <Button layoutX="474.0" layoutY="318.0" mnemonicParsing="false" onAction="#sendPressed" prefHeight="25.0" prefWidth="121.0" text="Send" />
    </children>
 </AnchorPane>
